URL(java.lang.String) in java.net.URL has been deprecated #68