@@ -1,6 +1,8 @@
 package nostr.base;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -19,7 +21,7 @@ public class ChannelProfile extends Profile {
         super(name, about, picture);
     }
 
-    public ChannelProfile(String name, String about, String url) throws MalformedURLException {
-        this(name, about, new URL(url));        
+    public ChannelProfile(String name, String about, String url) throws MalformedURLException, URISyntaxException {
+        this(name, about, new URI(url).toURL());
     }
 }
